--- a/src/templates/en/2019/base.html
+++ b/src/templates/en/2019/base.html
@@ -18,6 +18,9 @@
 
 {% block page_navigation %}Page navigation{% endblock %}
 
+{% block help_translate %}Help Translate{% endblock %}
+{% block translation_not_available %}English - not available in English{% endblock %}
+
 {% block table_of_contents_title %}Table of Contents{% endblock %}
 {% block contributors_title %}Contributors{% endblock %}
 {% block methodology_title %}Methodology{% endblock %}
