--- a/src/templates/es/2019/base.html
+++ b/src/templates/es/2019/base.html
@@ -18,6 +18,9 @@
 
 {% block page_navigation %}Navegación de página{% endblock %}
 
+{% block help_translate %}Ayuda a traducir{% endblock %}
+{% block translation_not_available %}en inglés - no disponible en francés{% endblock %}
+
 {% block table_of_contents_title %}Tabla de Contenidos{% endblock %}
 {% block contributors_title %}Contribuidores{% endblock %}
 {% block methodology_title %}Metodología{% endblock %}
