--- a/src/templates/fr/2019/base.html
+++ b/src/templates/fr/2019/base.html
@@ -18,6 +18,9 @@
 
 {% block page_navigation %}Page navigation{% endblock %}
 
+{% block help_translate %}Aidez à traduire{% endblock %}
+{% block translation_not_available %}en anglais - non disponible en français{% endblock %}
+
 {% block table_of_contents_title %}Table des matières{% endblock %}
 {% block contributors_title %}Contributeurs et contributrices{% endblock %}
 {% block methodology_title %}Méthodologie{% endblock %}
