--- a/src/static/css/2019.css
+++ b/src/static/css/2019.css
@@ -524,6 +524,7 @@ header .btn + .language-switcher {
   background: none;
   color: inherit;
   cursor: pointer;
+  border-color: #f2f2f2;
 }
 
 .language-switcher option,
@@ -541,6 +542,11 @@ header .btn + .language-switcher {
   position: absolute;
   right: 0px;
   pointer-events: none;
+}
+
+.not-translated {
+  font-style: italic;
+  font-size: 0.9em;
 }
 
 .dropdown-arrow {
