--- a/src/templates/base/2019/base_chapter.html
+++ b/src/templates/base/2019/base_chapter.html
@@ -146,7 +146,8 @@ window.discussion_url="https://discuss.httparchive.org/t/{{ metadata.get('discus
 
 {% macro render_prevnext() %}
   {% if prev_chapter %}
-      <a id="previous-chapter" title="{{ self.previous() }}" href="/{{lang}}/{{year}}/{{prev_chapter['title'].lower().replace(' ', '-').replace('/', '')}}">
+    {% if chapter_lang_exists(lang, year, prev_chapter['slug']) %}
+      <a id="previous-chapter" title="{{ self.previous() }}" href="/{{lang}}/{{year}}/{{prev_chapter['slug']}}">
           <span class="arrow" aria-hidden="true">&#8963;</span>
           <span class="chapter-no">
             {{ self.chapter() }} {{ prev_chapter['chapter'] }}
@@ -155,18 +156,47 @@ window.discussion_url="https://discuss.httparchive.org/t/{{ metadata.get('discus
               {{ prev_chapter['title'] }}
           </span>
       </a>
+      {% else %}
+      <a id="previous-chapter" title="{{ self.previous() }}" href="/en/{{year}}/{{prev_chapter['slug']}}">
+          <span class="arrow" aria-hidden="true">&#8963;</span>
+          <span class="chapter-no">
+            {{ self.chapter() }} {{ prev_chapter['chapter'] }}
+          </span>
+          <span class="chapter-title">
+              {{ prev_chapter['title'] }}
+          </span>
+          <span class="not-translated">
+            ({{ self.translation_not_available() }})
+          </span>
+      </a>
+      {% endif %}
   {% endif %}
 
   {% if next_chapter %}
-      <a id="next-chapter" title="{{ self.next() }}" href="/{{lang}}/{{year}}/{{next_chapter['title'].lower().replace(' ', '-').replace('/', '')}}">
-              <span class="arrow" aria-hidden="true">&#8963;</span>
-              <span class="chapter-no">
-                {{ self.chapter() }} {{ next_chapter['chapter'] }}
-              </span>
-              <span class="chapter-title">
-                  {{ next_chapter['title'] }}
-              </span>
-      </a>
+    {% if chapter_lang_exists(lang, year, next_chapter['title'].lower().replace(' ', '-').replace('/', '') ) %}
+    <a id="next-chapter" title="{{ self.next() }}" href="/{{lang}}/{{year}}/{{next_chapter['title'].lower().replace(' ', '-').replace('/', '')}}">
+            <span class="arrow" aria-hidden="true">&#8963;</span>
+            <span class="chapter-no">
+              {{ self.chapter() }} {{ next_chapter['chapter'] }}
+            </span>
+            <span class="chapter-title">
+                {{ next_chapter['title'] }}
+            </span>
+    </a>
+    {% else %}
+    <a id="next-chapter" title="{{ self.next() }}" href="/en/{{year}}/{{next_chapter['title'].lower().replace(' ', '-').replace('/', '')}}">
+            <span class="arrow" aria-hidden="true">&#8963;</span>
+            <span class="chapter-no">
+              {{ self.chapter() }} {{ next_chapter['chapter'] }}
+            </span>
+            <span class="chapter-title">
+                {{ next_chapter['title'] }}
+            </span>
+            <span class="not-translated">
+              ({{ self.translation_not_available() }})
+            </span>
+    </a>
+    {% endif %}
   {% endif %}
 {% endmacro %}
 
