--- a/src/templates/base/2019/table_of_contents.html
+++ b/src/templates/base/2019/table_of_contents.html
@@ -93,9 +93,15 @@
                 {% if chapter_config.todo %}
                 <span class="todo">{{ self.chapter() }} {{ chapter_config.chapter }}: {{ localizedChapterTitles[chapter_config.title] if localizedChapterTitles[chapter_config.title]|length else chapter_config.title }}</span>
                 {% else %}
-                <a href="{{ url_for('chapter', year=year, lang=lang, chapter=get_chapter_slug(chapter_config)) }}">
-                  {{ self.chapter() }} {{ chapter_config.chapter }}: {{ localizedChapterTitles[chapter_config.title] if localizedChapterTitles[chapter_config.title]|length else chapter_config.title }}
-                </a>
+                  {% if chapter_lang_exists(lang, year, chapter_config.slug) %}
+                  <a href="{{ url_for('chapter', year=year, lang=lang, chapter=chapter_config.slug) }}">
+                    {{ self.chapter() }} {{ chapter_config.chapter }}: {{ localizedChapterTitles[chapter_config.title] if localizedChapterTitles[chapter_config.title]|length else chapter_config.title }}
+                  </a>
+                  {% else %}
+                  <a href="{{ url_for('chapter', year=year, lang='en', chapter=chapter_config.slug) }}">
+                    {{ self.chapter() }} {{ chapter_config.chapter }}: {{ localizedChapterTitles[chapter_config.title] if localizedChapterTitles[chapter_config.title]|length else chapter_config.title }} <span class="not-translated">({{ self.translation_not_available() }})</span>
+                  </a>
+                  {% endif %}
                 {% endif %}
               </div>
             {% endfor %}
