Enable first translations (French and Spanish) (#685)
* Enable French

* Fix Google Sheet charts for French Third Parties chapter

* Enable Spanish

* Enable first translations boris review (#688)

* Typofix

* Usage of the translated title for Methodologie

* Translate "contributors" on Contributors' page

* Translate "see the contributors"

* Fix contributors number missing from intro text

* Allow better translation of contoributors filter

* Improve language selector (#689)

* Fix language selector on mobile

Co-authored-by: Boris Schapira <borisschapira@gmail.com>

--- a/src/static/css/2019.css
+++ b/src/static/css/2019.css
@@ -540,7 +540,7 @@ header .btn + .language-switcher {
 .language-switcher img:last-of-type,
 .year-switcher img:last-of-type {
   position: absolute;
-  right: 0px;
+  right: 1rem;
   pointer-events: none;
 }
 
@@ -846,6 +846,7 @@ p.copyright a {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    margin-bottom: 2rem;
   }
 
   /* Footer */
