--- a/src/templates/base/2019/methodology.html
+++ b/src/templates/base/2019/methodology.html
@@ -22,7 +22,7 @@
   </nav>
 
   <article id="maincontent" class="content">
-    <h1 class="title title-lg">Methodology</h1>
+    <h1 class="title title-lg">{{ self.methodology_title() }}</h1>
     {{ self.main_content() }}
   </article>
 </main>
