--- a/src/templates/es/2019/index.html
+++ b/src/templates/es/2019/index.html
@@ -18,7 +18,7 @@ Nuestra misión es combinar las estadísticas y tendencias sin procesar del HTTP
 {% endblock %}
 
 {% block contributors_description %}
-Web Almanac ha sido posible gracias al arduo trabajo de la comunidad web. {{ contributors }} personas han ofrecido incontables horas en las fases de planificación, investigación, redacción y producción.
+Web Almanac ha sido posible gracias al arduo trabajo de la comunidad web. {{ self.contributors() }} personas han ofrecido incontables horas en las fases de planificación, investigación, redacción y producción.
 {% endblock %}
 {% block contributors_link %}Ver los contribuidores{% endblock %}
 
