--- a/src/templates/es/2019/base.html
+++ b/src/templates/es/2019/base.html
@@ -34,11 +34,16 @@
 {% block open_the_menu %}Abre el menu{% endblock %}
 {% block close_the_menu %}Cierra el menú{% endblock %}
 
+{% block index_nav_title %}Tabla de contenido del capítulo{% endblock %}
+{% block index_title %}Índice{% endblock %}
+{% block open_the_index %}Abrir la tabla de contenido{% endblock %}
+{% block close_the_index %}Cerrar la tabla de contenido{% endblock %}
+
 {% block open %}Abre{% endblock %}
 {% block close %}Cierra{% endblock %}
 
-{% macro on_twitter(twitterHandle) %}@{{twitterHandle}} en Twitter{% endmacro %}
-{% macro on_github(gitHubHandle) %}{{gitHubHandle}} en GitHub{% endmacro %}
+{% macro onTwitter(twitterHandle) %}@{{twitterHandle}} en Twitter{% endmacro %}
+{% macro onGitHub(gitHubHandle) %}{{gitHubHandle}} en GitHub{% endmacro %}
 {% macro website(authorName) %}{{authorName}} sitio web{% endmacro %}
 
 {% macro edition(year) %}Edición {{ year }}{% endmacro %}
