Translation bug fixes (#692)
* CSS fixes

* Fix typo

* Change translation link

* Change Help to Translate link

* Bump CSS version number to avoid caching problems on release

--- a/src/static/css/2019.css
+++ b/src/static/css/2019.css
@@ -525,6 +525,7 @@ header .btn + .language-switcher {
   color: inherit;
   cursor: pointer;
   border-color: #f2f2f2;
+  padding-right: 2rem;
 }
 
 .language-switcher option,
@@ -600,7 +601,6 @@ blockquote {
 blockquote::before {
   content: '"' / "";
   position: absolute;
-  z-index: -1;
   top: -4rem;
   left: -7rem;
   opacity: .05;
