Add fallbacks for browsers which don't support content alt text (#700)

--- a/src/static/css/page.css
+++ b/src/static/css/page.css
@@ -370,9 +370,11 @@ figure .fig-desktop {
   .index-box .index-btn::after {
     font-weight: normal;
     float: right;
+    content: "+";
     content: "+" / "";
   }
   .index-box.show .index-btn::after {
+    content: "-";
     content: "-" / "";
   }
 
