--- a/src/templates/en/2019/base.html
+++ b/src/templates/en/2019/base.html
@@ -20,6 +20,8 @@
 
 {% block help_translate %}Help Translate{% endblock %}
 {% block translation_not_available %}English - not available in English{% endblock %}
+{% block language_switcher %}Language Switcher{% endblock %}
+{% block year_switcher %}Year Switcher{% endblock %}
 
 {% block table_of_contents_title %}Table of Contents{% endblock %}
 {% block contributors_title %}Contributors{% endblock %}
