--- a/src/templates/es/2019/base.html
+++ b/src/templates/es/2019/base.html
@@ -20,6 +20,8 @@
 
 {% block help_translate %}Ayuda a traducir{% endblock %}
 {% block translation_not_available %}en inglés - no disponible en español{% endblock %}
+{% block language_switcher %}Selector de idioma{% endblock %}
+{% block year_switcher %}Selector de año{% endblock %}
 
 {% block table_of_contents_title %}Tabla de Contenidos{% endblock %}
 {% block contributors_title %}Contribuidores{% endblock %}
