--- a/src/templates/fr/2019/base.html
+++ b/src/templates/fr/2019/base.html
@@ -20,6 +20,8 @@
 
 {% block help_translate %}Aidez à traduire{% endblock %}
 {% block translation_not_available %}en anglais - non disponible en français{% endblock %}
+{% block language_switcher %}Sélecteur de langue{% endblock %}
+{% block year_switcher %}Sélecteur d'année{% endblock %}
 
 {% block table_of_contents_title %}Table des matières{% endblock %}
 {% block contributors_title %}Contributeurs et contributrices{% endblock %}
