--- a/src/templates/ja/2019/base.html
+++ b/src/templates/ja/2019/base.html
@@ -20,6 +20,8 @@
 
 {% block help_translate %}Help Translate{% endblock %}
 {% block translation_not_available %}英語-日本語では使用できません{% endblock %}
+{% block language_switcher %}言語ピッカー{% endblock %}
+{% block year_switcher %}年ピッカー{% endblock %}
 
 {% block table_of_contents_title %}目次{% endblock %}
 {% block contributors_title %}貢献者{% endblock %}
