Update Japanese names of translated chsapters (#708)

--- a/src/templates/ja/2019/base.html
+++ b/src/templates/ja/2019/base.html
@@ -68,7 +68,7 @@
     "CSS": "CSS",
     "Markup": "マークアップ",
     "Media": "Media",
-    "Third Parties": "Third Parties",
+    "Third Parties": "サードパーティ",
     "Fonts": "Fonts",
     "Performance": "パフォーマンス",
     "Security": "セキュリティ",
@@ -78,8 +78,8 @@
     "Mobile Web": "Mobile Web",
     "Ecommerce": "Ecommerce",
     "CMS": "CMS",
-    "Compression": "Compression",
-    "Caching": "Caching",
+    "Compression": "圧縮",
+    "Caching": "キャッシング",
     "CDN": "CDN",
     "Page Weight": "Page Weight",
     "Resource Hints": "Resource Hints",
