--- a/src/templates/ja/2019/contributors.html
+++ b/src/templates/ja/2019/contributors.html
@@ -9,7 +9,7 @@
 
 {% block breadcrumb_name_2 %}{{ year }} 貢献者{% endblock %}
 
-{% block filter_by_team %}Filter by team: <span id="filtered-contributors">{{ self.contributors() }}</span> contributors{% endblock %}
+{% block filter_by_team %}Filter by team: <span id="filtered-contributors">{{ self.contributors() }}</span><span id="contributors-total-text" class="hidden"> of <span id="contributors-total">{{ config.contributors.items() | length }}</span></span> contributors.{% endblock %}
 
 {% block join_the_team_title%}Join the Web Almanac team{% endblock %}
 {% block join_the_team_text%}Join the team!{% endblock %}
