Fix misc typos and update word list (#715)

--- a/src/templates/en/2019/methodology.html
+++ b/src/templates/en/2019/methodology.html
@@ -314,7 +314,7 @@
       </p>
 
       <p>
-        All detection tools, including Wappalyzer, have their limitations. The validity of their results will always depend on how accurate their detection mechansims are. The Web Almanac will add a note in every chapter where Wappalyzer is used but its analysis may not be accurate due to a specific reason. 
+        All detection tools, including Wappalyzer, have their limitations. The validity of their results will always depend on how accurate their detection mechanisms are. The Web Almanac will add a note in every chapter where Wappalyzer is used but its analysis may not be accurate due to a specific reason.
       </p>
     </section>
 
