Server log improvements and error GA events (#722)
* Remove exceoptions for 404 pages

* Feed error messages back to Google Analytics as events

* Remove some of the uncecessary debug statements

--- a/src/templates/error/error.html
+++ b/src/templates/error/error.html
@@ -40,7 +40,7 @@
 {% endblock %}
 
 {% block main %}
-  <section class="main">
+  <main class="main">
     <h1>
       Error: {{ self.error() }}
     </h1>
@@ -51,5 +51,8 @@
       <a href="{{ url_for('home', lang=lang, year=year) }}" class="btn">Home</a>
     </div>
     <img class="methodology-characters" src="/static/images/methodology-characters.png" alt="" />
-  </section>
+  </main>
+  <script nonce="{{ csp_nonce() }}">
+    gtag('event', '{{ self.error() }}', { 'event_category': 'error', 'event_label': '{{ request.path }}', 'value': 1 });
+  </script>
 {% endblock %}
