--- a/src/templates/ja/2019/base_chapter.html
+++ b/src/templates/ja/2019/base_chapter.html
@@ -8,19 +8,21 @@
 
 {% block breadcrumb_name_2 %}{{ metadata.get('title') }}{% endblock %}
 
-{% block unedited %}[Unedited]{% endblock %}
+{% block unedited %}[未編集]{% endblock %}
 
 {% block prev_next_title %}Previous and next chapter navigation{% endblock %}
 
-{% block discuss_this_chapter %}Discuss this chapter{% endblock %}
-{% block comment %}comment{% endblock %}
-{% block comments %}comments{% endblock %}
-{% block written_by %}Written by{% endblock %}
-{% block reviewed_by %}Reviewed by{% endblock %}
-{% block translated_by %}Translated by{% endblock %}
+{% block discuss_this_chapter %}この章について話し合う{% endblock %}
+{% block comment %}コメント{% endblock %}
+{% block comments %}コメント{% endblock %}
+{% block queries %}クエリを表示{% endblock %}
+{% block results %}結果を表示{% endblock %}
+{% block written_by %}によって書かれた{% endblock %}
+{% block reviewed_by %}によってレビュー{% endblock %}
+{% block translated_by %}によって翻訳された{% endblock %}
 
-{% block author %}Author{% endblock %}
-{% block authors %}Authors{% endblock %}
+{% block author %}著者{% endblock %}
+{% block authors %}著者{% endblock %}
 
-{% block previous %}Previous Chapter (press 'p' or ','){% endblock %}
-{% block next %}Next Chapter (press 'n' or '.'){% endblock %}
+{% block previous %}前の章（ 'p'または ','を押す）{% endblock %}
+{% block next %}次の章（ 'n'または '.'を押す）{% endblock %}
