--- a/src/templates/en/2019/base_chapter.html
+++ b/src/templates/en/2019/base_chapter.html
@@ -15,6 +15,8 @@
 {% block discuss_this_chapter %}Discuss this chapter{% endblock %}
 {% block comment %}comment{% endblock %}
 {% block comments %}comments{% endblock %}
+{% block queries %}View queries{% endblock %}
+{% block results %}View results{% endblock %}
 {% block written_by %}Written by{% endblock %}
 {% block reviewed_by %}Reviewed by{% endblock %}
 {% block translated_by %}Translated by{% endblock %}
