--- a/src/templates/es/2019/base_chapter.html
+++ b/src/templates/es/2019/base_chapter.html
@@ -15,6 +15,8 @@
 {% block discuss_this_chapter %}Comenta este capítulo{% endblock %}
 {% block comment %}comentar{% endblock %}
 {% block comments %}comentarios{% endblock %}
+{% block queries %}Ver consultas{% endblock %}
+{% block results %}Ver resultados{% endblock %}
 {% block written_by %}Escrito por{% endblock %}
 {% block reviewed_by %}Revisado por{% endblock %}
 {% block translated_by %}Traducido por{% endblock %}
