--- a/src/templates/fr/2019/base_chapter.html
+++ b/src/templates/fr/2019/base_chapter.html
@@ -15,6 +15,8 @@
 {% block discuss_this_chapter %}Discuter de ce chapitre{% endblock %}
 {% block comment %}commentaire{% endblock %}
 {% block comments %}commentaires{% endblock %}
+{% block queries %}Afficher les requêtes{% endblock %}
+{% block results %}Voir les résultats{% endblock %}
 {% block written_by %}Écrit par{% endblock %}
 {% block reviewed_by %}Relu par{% endblock %}
 {% block translated_by %}Traduit par{% endblock %}
